Add web worker with filereadersync and base64 encoding

--- a/public/js/angularjs/index/index-template.html
+++ b/public/js/angularjs/index/index-template.html
@@ -76,3 +76,6 @@
 <br><br>
 
 <div id="progress"></div>
+
+<br><br>
+<input value="web worker" type="button" onclick="angular.element(this).scope().webworker()"/>
